update digital performance

--- a/main-dark/Digital_Performance.html
+++ b/main-dark/Digital_Performance.html
@@ -240,8 +240,7 @@
                 <div class="col-4">
                   <div class="card">
                     <div class="card-body">
-                      <i class="fas fa-comments">
-                      </i>
+                      <img src="assets/Wallboard 3 - Livechat Incoming.png" alt="Incoming" class="icon-img">
                       <div class="value text-warning">
                         48
                       </div>
@@ -250,12 +249,11 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>                
                 <div class="col-4">
                   <div class="card">
                     <div class="card-body">
-                      <i class="fas fa-comment-dots">
-                      </i>
+                      <img src="assets/Wallboard 3 - Livechat On Handling.png" alt="On Handling" class="icon-img">
                       <div class="value text-warning">
                         13
                       </div>
@@ -264,7 +262,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>                
                 <div class="col-4">
                   <div class="card">
                     <div class="card-body">
@@ -282,8 +280,7 @@
                 <div class="col-4">
                   <div class="card">
                     <div class="card-body">
-                      <i class="fas fa-comment-slash text-danger">
-                      </i>
+                      <img src="assets/Wallboard 3 - Livechat Abandoned.png" alt="Abandoned" class="icon-img text-danger">
                       <div class="value text-danger">
                         10
                       </div>
@@ -293,11 +290,11 @@
                     </div>
                   </div>
                 </div>
+                
                 <div class="col-4">
                   <div class="card">
                     <div class="card-body">
-                      <i class="fas fa-comment-dots text-warning">
-                      </i>
+                      <img src="assets/Wallboard 3 - Livechat Queueing.png" alt="Queueing" class="icon-img text-warning">
                       <div class="value text-danger">
                         30
                       </div>
@@ -307,6 +304,7 @@
                     </div>
                   </div>
                 </div>
+                
               </div>
               <!-- Kiri Bawah -->
               <div class="card mt-3">
