--- a/main-darkback/Contact_Center_Reports.html
+++ b/main-darkback/Contact_Center_Reports.html
@@ -53,7 +53,7 @@
       font-size: 2rem;
     }
 	.apexcharts-yaxis-texts-g apexcharts-xaxis-inversed-texts-g{
-	  fon-size:8px;
+	  font-size:8px;
 	  color:white;
 	}
   </style>
