update call performance

--- a/main-darkback/CallPerformances.html
+++ b/main-darkback/CallPerformances.html
@@ -204,13 +204,13 @@
 										</div>
 										
 										<center style="padding-top: 30px;">
-											<span class="badge badge-dot badge-danger"></span>
+											<span class="badge badge-dot badge-success"></span>
 											<a style="font-size: small;"> <= 50% </a>
 											&nbsp;&nbsp;&nbsp;
 											<span class="badge badge-dot badge-primary"></span>
 											<a style="font-size: small;"> > 50% and >=70% </a>
 											&nbsp;&nbsp;&nbsp;
-											<span class="badge badge-dot badge-success"></span>
+											<span class="badge badge-dot badge-danger"></span>
 											<a style="font-size: small;"> >70% and <=100% </a>
 										</center>
 									</div>
@@ -596,7 +596,7 @@
         fill: {
             type: 'solid', // Change to solid
             colors: [
-                '#e64f54', // Red for 0%-25%
+                '#009947', // Red for 0%-25%
                 '#ff8000', // Orange for 25%-50%
                 '#ffff00', // Yellow for 50%-75%
                 '#00ff00', // Green for 75%-100%
