--- a/main-darkback/CallPerformances.html
+++ b/main-darkback/CallPerformances.html
@@ -204,14 +204,17 @@
 										</div>
 										
 										<center style="padding-top: 30px;">
-											<span class="badge badge-dot badge-success"></span>
+											<span class="badge badge-dot badge-danger"></span>
 											<a style="font-size: small;"> <= 50% </a>
 											&nbsp;&nbsp;&nbsp;
-											<span class="badge badge-dot badge-primary"></span>
-											<a style="font-size: small;"> > 50% and >=70% </a>
+											<span class="badge badge-dot badge-warning"></span>
+											<a style="font-size: small;"> > 50% and <= 70% </a>
 											&nbsp;&nbsp;&nbsp;
-											<span class="badge badge-dot badge-danger"></span>
-											<a style="font-size: small;"> >70% and <=100% </a>
+											<span class="badge badge-dot badge-success"></span>
+											<a style="font-size: small;"> >70% and < 100% </a>
+											&nbsp;&nbsp;&nbsp;
+											<span class="badge badge-dot badge-primary"></span>
+											<a style="font-size: small;"> 100% </a>
 										</center>
 									</div>
 								</div>
