--- a/main-darkback/CallPerformances.html
+++ b/main-darkback/CallPerformances.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="../images/favicon.ico">
+	<link rel="icon" href="../images/bravo.png">
 
-	<title>BRAVO 1500225</title>
+	<title>Call Performances</title>
 
 	<!-- Vendors Style-->
 	<link rel="stylesheet" href="css/vendors_css.css">
